# shrine-diet-bioactivity

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SELFHOST.md
.claude/plan/: issues-14-16-followup.md
.github/workflows/: ci.yml  deploy-mcp.yml  mcp-ci.yml
docs/: ARCHITECTURE.md  DATASET_PROVENANCE.md  INDEX.md  KG_COMPLETENESS_AUDIT.md  kg-architecture-design.md
docs/adr/: 0001-vector-storage-on-aura.md  0008-disease-canonicalization.md  0009-kegg-pathway-overlay.md
mcp/: .env.template  Makefile  README.md  posthog-setup-report.md  pyproject.toml
mcp-herbal-botanicals/: Makefile  package.json
mcp-herbal-botanicals/lightrag/: config_local.env  entity_schema.py  fix_unknown_entities.py  ingest_unified.py  kg_metrics.py
mcp/src/kg_mcp/: analytics.py  auth.py  server.py  tools.py
mcp/src/kg_mcp/storage/: __init__.py  milvus.py  nano.py  vector_store.py
mcp/tests/: README.md
mcp/tests/e2e/: _braintrust_logger.py  _helpers.py  conftest.py  test_agentic_kg_query.py  test_kg_coverage_probes.py  test_live_endpoints.py  test_tool_roundtrips.py
mcp/tests/integration/: conftest.py  test_consumer_smoke.py  test_mcp_client_smoke.py  test_milvus_vectorstore.py
mcp/tests/unit/: test_analytics.py  test_auth.py  test_client.py  test_deploy_workflow.py  test_e2e_helpers.py  test_server_registration.py  test_tools.py  test_tools_error_paths.py  test_vector_store.py
scripts/: test_coverage_ratio.py
scripts/dev/: tag_test_files.py
shrine-diet-bioactivity/: .env.template  .gitignore  .mcp.json  Makefile  README.md  package-lock.json  package.json  pytest.ini  vitest.config.ts
(+162 files in other folders)
