[project]
name = "kg-mcp"
version = "0.1.0"
description = "MCP gateway over the shrine-diet-bioactivity LightRAG KG"
requires-python = ">=3.10"
# Note: integration tests use the private `_mcp_server` attr (mcp.shared.memory
# pattern); pinned <2.0 to hedge against breaking SDK rename.
dependencies = [
    "mcp>=1.0,<2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyjwt[crypto]>=2.8",  # Clerk JWT verification
    "posthog>=3.0.0",
]

[project.optional-dependencies]
# Test extras — pinned to actual usage in tests/ and the `make test-coverage`
# target. ``braintrust`` is soft-imported by ``tests/e2e/_braintrust_logger.py``
# (tests run as a no-op when the SDK is not installed and/or
# ``BRAINTRUST_API_KEY`` is unset). httpx is also in `dependencies` above but
# is imported directly by tests/, so it's listed here to document the explicit
# test-time dependency.
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "braintrust>=0.0.180",
]

[project.scripts]
kg-mcp-server = "kg_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Pure unit test, no I/O, no network",
    "integration: Real components",
    "e2e: Real network call to staged services",
    "live_llm: Calls real LLM",
    "live_llm_replay: Cassette replay",
    "aura: Hits live Neo4j Aura",
    "slow: Runtime > 30s",
]
addopts = ["-m", "not e2e and not integration"]
